@@ -1,3 +1,8 @@
+2008-03-13  William Lachance  <wrlach@gmail.com>
+
+	* clock.c: (find_entry_changed): Fix crash when there are no
+	locations available. Fixes bug #521563.
+
 ==================== 2.22.0 ====================
 
 2008-03-05  Jens Granseuer  <jensgr@gmx.net>
